Fix: improve spacing on smartphones

--- a/src/10-typography/group-b.less
+++ b/src/10-typography/group-b.less
@@ -16,7 +16,7 @@
 }
 
 .type-cannon-spacing() {
-    margin-top: 18px;
+    margin-top: 36px;
 }
 
 .type-trafalgar() {
@@ -25,7 +25,7 @@
 }
 
 .type-trafalgar-spacing() {
-    margin-top: 14px;
+    margin-top: 28px;
 }
 
 .type-doublepica() {
